# mcaat

./: .gitignore  .gitmodules  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CRISPR_arrays.txt  Dockerfile  Makefile  README.md  alignment_results.txt  cmake_install.cmake  log.txt  memory  mg_01_report  process_data.py  process_data.sh  readme.md  report_format  report_memory.txt  rw_graph
data/in/: settings.txt
data/results/: before_filter  genome_results_234  genome_second_round  genome_third_round  genome_third_round_3
include/: cycle_finder.h  filters.h  node.h  path_writer.h  sdbg_build.h  settings.h
proof_of_concept/: all_files  genome_results  home.code-workspace  new_method_after_filter  new_method_before_filter  proof_of_concept.ods
proof_of_concept/production_scripts/: PROD_FILTER.py  log.txt  merge.py  needle_in_haystack.py  perform_removal_of_duplicates.py  remove_duplicates.sh  string_based_filter.py
proof_of_concept/scripts/: 01_organize.sh  02_generate_reads.py  02_genome2reads.sh  03_build.sh  03_build_graph.py  03_build_graph.sh  03_results  04_merge.py  04_merge_cycles.sh  05_compare_to_ref.py  05_compare_to_reference.sh  06_cleaning.py  07_calculate_total.py  08_calculate.py  09_post_filtering_i.py  10_test_post_filter.py  11_remove_duplicates.py  12_generate_metagenome.py  13_copy_all_the_files.py  14.py  _reports.txt  batch_analysis.py  batch_merge.py  batch_processing.sh  folders.txt  no_filter_report.txt  reads_generator.py  report.txt  rest_of_reports.txt
src/: _cycle_finder.h  cycle_finder.cpp  cycle_finder.h  cycle_finder_parallel.h  dot_generator.h  filtering_seqan.h  filters.cpp  graph_analysis.h  graph_writer.h  helpers.h  main.cpp  path_writer.cpp  path_writer.h  sdbg_build.cpp  slns_not_taken_into_acnt.txt  welcome.txt
src/core/: cycle_finder.cpp  cycle_finder.h
src/data/in/: settings.txt
src/helpers/: cycle_properties.h  cycle_writer.cpp  cycle_writer.h  generic_functions.cpp  generic_functions.h  node.h  path_writer.h  settings.h  system_resources.h
src/helpers/build_graph/: sdbg_build.cpp  sdbg_build.h
